// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoPlaceholder can fill it's container 1`] = `
.c0 {
  padding-top: 0%;
  overflow: visible;
  height: 100%;
  position: relative;
}

<Component
  className="c0"
  fill={true}
  src="default"
  srcset={
    Array [
      Object {
        "src": "default",
        "width": 100,
      },
      Object {
        "src": "larger",
        "width": 200,
      },
      Object {
        "src": "largest",
        "width": 300,
      },
    ]
  }
>
  <styled.div
    position="center"
  >
    <div />
  </styled.div>
</Component>
`;

exports[`VideoPlaceholder renders correctly 1`] = `
.c0 {
  padding-top: 56.25%;
  overflow: visible;
  height: 100%;
  position: relative;
}

<Component
  className="c0"
  fill={false}
  src="default"
  srcset={
    Array [
      Object {
        "src": "default",
        "width": 100,
      },
      Object {
        "src": "larger",
        "width": 200,
      },
      Object {
        "src": "largest",
        "width": 300,
      },
    ]
  }
>
  <styled.div
    position="center"
  >
    <div />
  </styled.div>
</Component>
`;
